cmake_minimum_required(VERSION 3.21)
project(untitled C)

set(CMAKE_C_STANDARD 11)
set(SDL_DIR /usr/local/Cellar/sdl2/2.0.18)
set(SDL_GFX_DIR /usr/local/Cellar/sdl2_gfx/1.0.4)
set(SDL_TTF_DIR /usr/local/Cellar/sdl2_ttf/2.0.18)
set(SDL_IMAGE_DIR /usr/local/Cellar/sdl2_image/2.0.5)
include_directories(${SDL_DIR}/include/)
include_directories(${SDL_GFX_DIR}/include/)
include_directories(${SDL_TTF_DIR}/include/)
include_directories(${SDL_IMAGE_DIR}/include/)
link_directories(${SDL_GFX_DIR}/lib/)
link_directories(${SDL_DIR}/lib/)
link_directories(${SDL_TTF_DIR}/lib/)
link_directories(${SDL_IMAGE_DIR}/lib/)

add_executable(untitled main.c map.c map.h)
target_link_libraries(untitled m SDL2 SDL2_gfx)
